syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
  uint64 term = 1;
  uint64 candidate_id = 2;
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendLogArgs {
  uint64 term = 1;
  uint64 leader_id = 2;
}

message AppendLogReply {
  uint64 term = 1;
  bool success = 2;
}